--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,20 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
+# Node.js / Express
 /node_modules
-/.pnp
-.pnp.js
+npm-debug.log
+.env
 
-# testing
-/coverage
-
-# production
+# React
 /build
+/node_modules
 
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# MongoDB
+/.env
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Logs
+*.log
+logs/
+
+# IDE
+.idea
+.vscode
+
