--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-redux": "^8.0.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "reactstrap": "^9.1.8",
     "styled-components": "^5.3.9",
     "web-vitals": "^2.1.4"
